--- a/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 <!--    <url-pattern>/</url-pattern>-->
 <!--  </servlet-mapping>-->
 
-    <servlet>
+  <servlet>
     <servlet-name>jersey-servlet</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <load-on-startup>1</load-on-startup>
@@ -34,50 +34,50 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
-  <error-page>
-    <error-code>414</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>414</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>413</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>413</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>405</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>405</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>404</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>404</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>403</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>403</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>402</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>402</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>401</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>401</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>400</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>400</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
-  <error-page>
-    <error-code>500</error-code>
-    <location>/error</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>500</error-code>-->
+<!--    <location>/error</location>-->
+<!--  </error-page>-->
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
