[pom, web.xml] Running, but not recognizing endpoints

--- a/tpe_paw/pom.xml
+++ b/tpe_paw/pom.xml
@@ -9,7 +9,7 @@
     <name>tpe_paw</name>
 
     <properties>
-        <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
+        <org.springframework.version>4.3.0.RELEASE</org.springframework.version>
         <servlet-api.version>2.5</servlet-api.version>
         <org.springframework.security.version>4.0.4.RELEASE</org.springframework.security.version>
         <jstl.version>1.2</jstl.version>
@@ -33,24 +33,27 @@
         <org.hibernate.jpa.version>1.0.0.Final</org.hibernate.jpa.version>
         <jersey.version>3.0-SNAPSHOT</jersey.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
+        <jboss.logging.version>3.3.0.Final</jboss.logging.version>
+        <eclipse.persistence.moxy.version>3.0.0-M1</eclipse.persistence.moxy.version>
+        <hk2.version>3.0.0-M2</hk2.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
 
             <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
-<!--            <dependency>-->
-<!--                <groupId>javax.ws.rs</groupId>-->
-<!--                <artifactId>javax.ws.rs-api</artifactId>-->
-<!--                <version>${javax.ws.rs-api.version}</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>${javax.ws.rs-api.version}</version>
+            </dependency>
 
             <!-- JERSEY -->
             <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
                 <!--                TODO move-->
-                <version>3.3.0.Final</version>
+                <version>${jboss.logging.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.containers</groupId>
@@ -82,7 +85,7 @@
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
                 <artifactId>hk2</artifactId>
-                <version>2.5.0-b05</version> <!-- última versión compatible con Java 8 -->
+                <version>${hk2.version}</version> <!-- última versión compatible con Java 8 -->
                 <exclusions>
                     <exclusion>
                         <artifactId>jboss-logging</artifactId>
@@ -126,7 +129,7 @@
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.moxy</artifactId>
-                <version>2.7.2</version>
+                <version>${eclipse.persistence.moxy.version}</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>jboss-logging</artifactId>
@@ -337,12 +340,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>${org.hibernate.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>jboss-logging</artifactId>
-                        <groupId>org.jboss.logging</groupId>
-                    </exclusion>
-                </exclusions>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <artifactId>jboss-logging</artifactId>-->
+<!--                        <groupId>org.jboss.logging</groupId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
             </dependency>
             <dependency>
                 <groupId>org.hibernate.javax.persistence</groupId>
