[Authentication] JWT starters: poc login endpoint, token filter, and login service in front end

--- a/tpe_paw/interfaces/pom.xml
+++ b/tpe_paw/interfaces/pom.xml
@@ -30,6 +30,10 @@
   <artifactId>models</artifactId>
   <version>${project.parent.version}</version>
 </dependency>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
