--- a/tpe_paw/pom.xml
+++ b/tpe_paw/pom.xml
@@ -140,6 +140,13 @@
                 <artifactId>javax.json</artifactId>
                 <version>1.0.4</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>3.10.3</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.springframework</groupId>
