--- a/tpe_paw/webapp/pom.xml
+++ b/tpe_paw/webapp/pom.xml
@@ -100,6 +100,10 @@
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
         <!-- REST end-->
 
