--- a/tpe_paw_front/package.json
+++ b/tpe_paw_front/package.json
@@ -16,7 +16,8 @@
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
