--- a/tpe_paw_front/package.json
+++ b/tpe_paw_front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-extensions": "^3.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
