--- a/tpe_paw/webapp/pom.xml
+++ b/tpe_paw/webapp/pom.xml
@@ -113,6 +113,11 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>jersey-bean-validation</artifactId>
+        </dependency>
+
         <!-- REST end-->
 
         <dependency>
