--- a/tpe_paw_front/package.json
+++ b/tpe_paw_front/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "axios-extensions": "^3.1.3",
     "core-js": "^3.6.5",
+    "simple-syntax-highlighter": "^1.4.4",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
     "vue-multiselect": "^2.1.6",
