--- a/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
   <servlet-mapping>
     <servlet-name>jersey-servlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
