--- a/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,11 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
   <servlet-mapping>
     <servlet-name>jersey-servlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>jersey-servlet</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 
