Integrating vue in war

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,6 @@ target/
 hs_err_pid*
 
 # node_modules for front-end
-tpe_paw_front/node_modules
+tpe_paw/frontend/node_modules
+
+tpe_paw/frontend/node_modules/.bin/
