--- a/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tpe_paw/webapp/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,11 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   </servlet-mapping>
 
   <servlet-mapping>
+    <servlet-name>jersey-servlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
   </servlet-mapping>
@@ -66,6 +71,8 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <servlet-name>default</servlet-name>
     <url-pattern>*.png</url-pattern>
   </servlet-mapping>
+
+
 
   <filter>
     <filter-name>encoding-filter</filter-name>
