--- a/tpe_paw/frontend/package.json
+++ b/tpe_paw/frontend/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "vue-progressbar": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
