--- a/tpe_paw/frontend/package.json
+++ b/tpe_paw/frontend/package.json
@@ -21,7 +21,8 @@
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.0.1",
-    "vue-progressbar": "^0.7.5"
+    "vue-progressbar": "^0.7.5",
+    "vue-masonry-css": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
